--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,7 +12,7 @@
 #
 # To use a different locale, set it with `I18n.locale`:
 #
-    I18n.locale = :fr
+#   I18n.locale = :fr
 #
 # This would use the information in config/locales/es.yml.
 #
